xedoc-rs/tui-settings/src/snapshots/xedoc_tui_settings__keymap_setup__tests__keymap_debug_view_delayed_hint.snap
---
source: tui-settings/src/keymap_setup.rs
expression: rendered
---
Keypress Inspector
Press any key to see what Xedoc receives. Esc is inspected; Ctrl+C closes.
Still waiting? If nothing changes when you press a key, your terminal is not sending that key to
Xedoc. Only received keys can be assigned as shortcuts.

Waiting for a keypress...
