xedoc-rs/tui-settings/src/snapshots/xedoc_tui_settings__keymap_setup__tests__keymap_debug_view_initial.snap
---
source: tui-settings/src/keymap_setup.rs
expression: "render_debug(&view, 80)"
---
Keypress Inspector
Press any key to see what Xedoc receives. Esc is inspected; Ctrl+C closes.
Tip: Xedoc can only inspect keys your terminal sends.

Waiting for a keypress...
